...
              "New Deck",
              style = MaterialTheme.typography.headlineMedium,
              color = colorScheme.primary)
          TextButton(
              onClick = onCancel,
              colors = ButtonDefaults.textButtonColors(contentColor = colorScheme.onBackground)) {
                Text("Cancel")
              }
        }
        Spacer(Modifier.height(8.dp))

        val title by vm.title.collectAsState()
        val description by vm.description.collectAsState()
...
